exports[`Comparison with Node.js' assert module > deepStrictEqual / \"to deep equal\" > \"to deep equal\" <snapshot> 1`] = `
{
  "message": "Assertion \\"{unknown} 'to deep equal' / 'to deeply equal' {unknown}\\" failed:\\n- expected  - 1\\n+ actual    + 1\\n\\n  Object {\\n    \\"a\\": 1,\\n    \\"b\\": Object {\\n-     \\"c\\": 3,\\n+     \\"c\\": 2,\\n    },\\n  }",
  "generatedMessage": false,
  "name": "AssertionError",
  "code": "ERR_ASSERTION",
  "actual": {
    "a": 1,
    "b": {
      "c": 2
    }
  },
  "expected": {
    "a": 1,
    "b": {
      "c": 3
    }
  },
  "diff": "simple",
  "assertionId": "unknown-to-deep-equal-to-deeply-equal-unknown-3s2p"
}
`;

exports[`Comparison with Node.js' assert module > deepStrictEqual / \"to deep equal\" > deepStrictEqual <snapshot> 1`] = `
{
  "message": "Expected values to be strictly deep-equal:\\n+ actual - expected\\n\\n  {\\n    a: 1,\\n    b: {\\n+     c: 2\\n-     c: 3\\n    }\\n  }\\n",
  "generatedMessage": true,
  "code": "ERR_ASSERTION",
  "actual": {
    "a": 1,
    "b": {
      "c": 2
    }
  },
  "expected": {
    "a": 1,
    "b": {
      "c": 3
    }
  },
  "operator": "deepStrictEqual",
  "diff": "simple"
}
`;
